--- a/BigganiBondhu/biggani_bondhu.html
+++ b/BigganiBondhu/biggani_bondhu.html
@@ -55,18 +55,18 @@
   <script>
     // Scientist data
     const scientists = [
-      { id: 'einstein', name: 'আলবার্ট আইনস্টাইন', quote: 'কল্পনাশক্তি জ্ঞানের চেয়ে গুরুত্বপূর্ণ।', avatar: 'https://via.placeholder.com/150', emoji: '🔬' },
-                { id: 'curie', name: 'মেরি কিউরি', quote: 'কাজই কুখ্যাতি নয়।', avatar: 'https://via.placeholder.com/150', emoji: '⚛️' },
-                { id: 'bose', name: 'সত্যেন্দ্রনাথ বোস', quote: 'বিজ্ঞানই ধর্ম।', avatar: 'https://via.placeholder.com/150', emoji: '🔭' },
-                { id: 'hawking', name: 'স্টিফেন হকিং', quote: 'সবার আগে মন স্থির রাখুন।', avatar: 'https://via.placeholder.com/150', emoji: '🌌' },
-                { id: 'newton', name: 'আইজ্যাক নিউটন', quote: 'প্রত্যেকটি কর্মের সমান ও বিপরীত প্রতিক্রিয়া রয়েছে।', avatar: 'https://via.placeholder.com/150', emoji: '🍎' },
-                { id: 'tesla', name: 'নিকোলা টেসলা', quote: 'ভবিষ্যতে মানুষ চোখ দিয়ে দেখবে না, তারা মন দিয়ে অনুভব করবে।', avatar: 'https://via.placeholder.com/150', emoji: '⚡' },
-                { id: 'darwin', name: 'চার্লস ডারউইন', quote: 'ইস্ত্রীর জীবন সংগ্রামে বেঁচে থাকে তা নয়, অভিযোজনে সক্ষমরা বেঁচে থাকে।', avatar: 'https://via.placeholder.com/150', emoji: '🧬' },
-                { id: 'galileo', name: 'গ্যালিলিও গ্যালিলি', quote: 'তুমি তাহা না করিলে, সুতরাং তাহা হয় না।', avatar: 'https://via.placeholder.com/150', emoji: '🔭' },
-                { id: 'maxwell', name: 'জেমস ক্লার্ক ম্যাক্সওয়েল', quote: 'বিজ্ঞান হচ্ছে বিশদ পর্যবেক্ষণ, পরিমাপ, এবং পরীক্ষা।', avatar: 'https://via.placeholder.com/150', emoji: '📊' },
-                { id: 'faraday', name: 'মাইকেল ফারাডে', quote: 'না জানা অনেক বড় অপরাধ।', avatar: 'https://via.placeholder.com/150', emoji: '🔋' },
-                { id: 'feynman', name: 'রিচার্ড ফেইনম্যান', quote: 'যদি তুমি কিছু বুঝতে না পারো, যথেষ্টভাবে গভীরে অনুসন্ধান করো।', avatar: 'https://via.placeholder.com/150', emoji: '🧠' },
-                { id: 'bohr', name: 'নিলস বোর', quote: 'প্রশ্ন করাটা ইতিমধ্যে অনেক কিছু জানার অঙ্গীকার।', avatar: 'https://via.placeholder.com/150', emoji: '☢️' },
+      { id: 'einstein', name: 'আলবার্ট আইনস্টাইন', quote: 'কল্পনাশক্তি জ্ঞানের চেয়ে গুরুত্বপূর্ণ।', avatar: 'https://www.sciencekids.co.nz/images/pictures/scientists/alberteinstein.jpg', emoji: '🔬' },
+                { id: 'curie', name: 'মেরি কিউরি', quote: 'কাজই কুখ্যাতি নয়।', avatar: 'https://www.sciencekids.co.nz/images/pictures/scientists/mariecurie.jpg', emoji: '⚛️' },
+                { id: 'bose', name: 'সত্যেন্দ্রনাথ বোস', quote: 'বিজ্ঞানই ধর্ম।', avatar: 'https://upload.wikimedia.org/wikipedia/commons/f/fe/SatyenBose1925.jpg', emoji: '🔭' },
+                { id: 'hawking', name: 'স্টিফেন হকিং', quote: 'সবার আগে মন স্থির রাখুন।', avatar: 'https://www.sciencekids.co.nz/images/pictures/scientists/stephenhawking.jpg', emoji: '🌌' },
+                { id: 'newton', name: 'আইজ্যাক নিউটন', quote: 'প্রত্যেকটি কর্মের সমান ও বিপরীত প্রতিক্রিয়া রয়েছে।', avatar: 'https://www.sciencekids.co.nz/images/pictures/scientists/isaacnewton.jpg', emoji: '🍎' },
+                { id: 'tesla', name: 'নিকোলা টেসলা', quote: 'ভবিষ্যতে মানুষ চোখ দিয়ে দেখবে না, তারা মন দিয়ে অনুভব করবে।', avatar: 'https://www.sciencekids.co.nz/images/pictures/scientists/nikolatesla.jpg', emoji: '⚡' },
+                { id: 'darwin', name: 'চার্লস ডারউইন', quote: 'ইস্ত্রীর জীবন সংগ্রামে বেঁচে থাকে তা নয়, অভিযোজনে সক্ষমরা বেঁচে থাকে।', avatar: 'https://www.sciencekids.co.nz/images/pictures/scientists/charlesdarwin.jpg', emoji: '🧬' },
+                { id: 'galileo', name: 'গ্যালিলিও গ্যালিলি', quote: 'তুমি তাহা না করিলে, সুতরাং তাহা হয় না।', avatar: 'https://upload.wikimedia.org/wikipedia/commons/thumb/d/d4/Justus_Sustermans_-_Portrait_of_Galileo_Galilei%2C_1636.jpg/500px-Justus_Sustermans_-_Portrait_of_Galileo_Galilei%2C_1636.jpg', emoji: '🔭' },
+                { id: 'maxwell', name: 'জেমস ক্লার্ক ম্যাক্সওয়েল', quote: 'বিজ্ঞান হচ্ছে বিশদ পর্যবেক্ষণ, পরিমাপ, এবং পরীক্ষা।', avatar: 'https://upload.wikimedia.org/wikipedia/commons/5/57/James_Clerk_Maxwell.png', emoji: '📊' },
+                { id: 'faraday', name: 'মাইকেল ফারাডে', quote: 'না জানা অনেক বড় অপরাধ।', avatar: 'https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcQ5WLF66zt86imkCC4U46lqjXEptVLwaA625O_VfZvAfZtXysHr-6n3oqY8qemQALuyS26OZtmIxu3Y8GrfdTzbVpXUE952AyYNbR0XRlQ', emoji: '🔋' },
+                { id: 'feynman', name: 'রিচার্ড ফেইনম্যান', quote: 'যদি তুমি কিছু বুঝতে না পারো, যথেষ্টভাবে গভীরে অনুসন্ধান করো।', avatar: 'https://upload.wikimedia.org/wikipedia/commons/1/1a/RichardFeynman-PaineMansionWoods1984_copyrightTamikoThiel_bw.jpg', emoji: '🧠' },
+                { id: 'bohr', name: 'নিলস বোর', quote: 'প্রশ্ন করাটা ইতিমধ্যে অনেক কিছু জানার অঙ্গীকার।', avatar: 'https://upload.wikimedia.org/wikipedia/commons/6/6d/Niels_Bohr.jpg', emoji: '☢️' },
                 { id: 'curie_s', name: 'পিয়েরে কিউরি', quote: 'শিক্ষা হচ্ছে সবচেয়ে শক্তিশালী অস্ত্র।', avatar: 'https://via.placeholder.com/150', emoji: '📚' },
                 { id: 'lovelace', name: 'আদা লাভেলেস', quote: 'যন্ত্রচালিত করা মানুষের চিন্তার সাপেক্ষে।', avatar: 'https://via.placeholder.com/150', emoji: '💻' },
                 { id: 'turing', name: 'অ্যালান টুরিং', quote: 'যন্ত্র কি চিন্তা করতে পারে? এটাই প্রশ্ন।', avatar: 'https://via.placeholder.com/150', emoji: '🧮' },
